🐛 fix visibility transition -> max-height transition

--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,7 @@ h1.title {
   display: flex;
   justify-content: space-evenly;
   margin-bottom: 160px;
+  transition: visibility 0.3s ease-in-out;
 }
 
 .bio .study,
@@ -136,7 +137,7 @@ h1.title {
 .bio button {
   font-size: 20px;
   font-weight: 700;
-  transition: 500ms ease-in-out;
+  transition: margin-bottom 300ms ease-in-out;
 }
 
 .bio button:hover {
@@ -149,10 +150,12 @@ h1.title {
 
 #study-content,
 #work-content {
-  visibility: hidden;
-  height: 0px;
+  max-height: 0px;
+  overflow: hidden;
+  /* background-color: red; */
   font-size: 16px;
   line-height: 1.5em;
+  transition: max-height 300ms ease-in-out;
 }
 
 .active-button {
@@ -162,8 +165,9 @@ h1.title {
 }
 
 .show {
-  visibility: visible !important;
-  height: auto !important;
+  /* visibility: visible !important;
+  opacity: 1 !important; */
+  max-height: 200px !important;
 }
 
 /* ---------- values ---------- */
